[tool.poetry]
name = "silent-subnet-finder"
version = "0.1.0"
description = "A simple tool to get a valid IP and netmask in an unknown environment"
authors = ["Headorteil"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyshark = "^0.6"
rich = "^13.7.1"
typer = "^0.12.3"
psutil = "^5.9.8"

[tool.poetry.scripts]
silent-subnet-finder = "silent_subnet_finder:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
