[tool.poetry]
name = "silent-subnet-finder"
version = "0.1.0"
description = "A simple tool to get a valid IP and netmask in an unknown environment"
authors = ["Headorteil"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyshark = "^0.6"
rich = "^13.7.1"
typer = "^0.12.3"
psutil = "^5.9.8"

[tool.poetry.scripts]
silent-subnet-finder = "silent_subnet_finder:app"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PYI",      # flake8-pyi
]
